remove dead links

--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
                             </div>
                             <div class="col-md-5">
                                 <div class="text-right-left">
-                                    <p><a href="#0">Terms &amp; Conditions</a> <span>|</span> <a href="#0">Impression</a></p>
+                                    <!-- <p><a href="#0">Terms &amp; Conditions</a> <span>|</span> <a href="#0">Impression</a></p> -->
                                 </div>
                             </div>
                         </div>
