--- a/babetsy.html
+++ b/babetsy.html
@@ -73,6 +73,7 @@
                             <h1>BABETSY</h1>
                             <hr>
                             <p>A shopping website for baby products</p>
+                            <p class="project-links"><a href="https://babetsy.herokuapp.com/">Live Site</a> | <a href="https://github.com/xwnnie/babetsy">GitHub</a></p>
                         </div>
                     </div>
                 </div>
