--- a/esena.html
+++ b/esena.html
@@ -76,6 +76,8 @@
                             <h1>esena</h1>
                             <hr>
                             <p>Esena is a project management tool designed to optimize team workflow and collaboration</p>
+                            <p class="project-links"><a href="https://esena.herokuapp.com/">Live Site</a> | <a
+                                    href="https://github.com/vee-alianza/Esena">GitHub</a></p>
                         </div>
                     </div>
                 </div>
