--- a/index.html
+++ b/index.html
@@ -126,16 +126,17 @@
                                         <!-- <p><b>website:</b> www.fgorman.com</p> -->
                                         <p><b>Phone:</b> +1 520 288 4077</p>
                                         <!-- <p><b>Study:</b> Univercity of Harvard</p> -->
-                                    </div>
-                                    <div class="col-md-6">
+                                    <!-- </div>
+                                    <div class="col-md-6"> -->
                                         <!-- <p><b>Degree:</b> Master</p> -->
                                         <p><b>Mail:</b> niexiaowen90@gmai.com</p>
-                                        <p><b>Linkedin:</b> @xiaowennie</p>
+                                        <p><b>Linkedin:</b> <a href="https://www.linkedin.com/in/xiaowennie/" class="social-contact-link">@xiaowennie</a></p>
+                                        <p><b>Github:</b> <a href="https://github.com/xwnnie" class="social-contact-link">@xwnnie</a></p>
                                         <!-- <p><b>Freelance:</b> Available</p> -->
                                     </div>
                                 </div>
                             </div>
-                            <!-- <div class="btn-2 mb-5"><a href="#0"><span>Download CV&nbsp;&nbsp;<i class="ti-download"></i></span></a></div> -->
+                            <div class="btn-2 mb-5"><a href="./Xiaowen-Nie-resume.pdf"><span>Download CV&nbsp;&nbsp;<i class="ti-download"></i></span></a></div>
                         </div>
                         <div class="col-md-5 offset-md-1">
                             <div class="about-img animate-box" data-animate-effect="fadeInUp">
@@ -154,10 +155,10 @@
                                 <div class="profile" id="experience">
                                     <div class="block">
                                         <h4>Experience</h4>
-                                        <!-- <div class="item">
+                                        <div class="item">
                                             <h6>Hammerhead and Oranges <span>2020 - 2021</span></h6>
                                             <p>Linguist</p>
-                                        </div> -->
+                                        </div>
                                         <div class="item" >
                                             <h6>University of Arizona <span>2013 - 2017</span></h6>
                                             <p>Teaching Associate</p>
@@ -177,7 +178,15 @@
                                         </div>
                                         <div class="item">
                                             <h6>University of Arizona<span>2020</span></h6>
-                                            <p>Linguistics</p>
+                                            <p>Ph.D. in Linguistics</p>
+                                        </div>
+                                        <div class="item">
+                                            <h6>Hong Kong Polytechnic University<span>2012</span></h6>
+                                            <p>M.A. in Teaching Chinese as a Foreign Language</p>
+                                        </div>
+                                        <div class="item">
+                                            <h6>Xi'an International Studies University<span>2011</span></h6>
+                                            <p>B.A. in Translation and Interpreting</p>
                                         </div>
                                     </div>
                                 </div>
@@ -349,7 +358,7 @@
                         <div class="col-md-12 mb-5">
                             <div class="text-center">
                                 <h2>Want to work together!</h2>
-                                <h5>I’m looking for jobs.</h5>
+                                <h5>I'm open to opportunies.</h5>
                                 <div class="btn-3"><a href="index.html#contact"><span>Hire Me&nbsp;&nbsp;<small><i class="ti-angle-down"></i></small></span></a></div>
                             </div>
                         </div>
@@ -368,8 +377,8 @@
                         <!-- Contact Info -->
                         <div class="col-md-6 mb-4">
                             <h5>Let's create the future</h5>
-                            <p>I'am available for commissions and collaborations,
-                                <br>and I’m excited to hear from you about new projects. </p>
+                            <p>I'm available for commissions and collaborations,
+                                <br>and I'm excited to hear from you about new projects. </p>
                             <ul class="list-unstyled contact-list">
                                 <li>
                                     <div class="icon"><span class="ti-headphone-alt"></span></div>
