--- a/natureclikr.html
+++ b/natureclikr.html
@@ -76,6 +76,8 @@
                             <h1>NatureClikr</h1>
                             <hr>
                             <p>NatureClikr is a Flickr clone.</p>
+                            <p class="project-links"><a href="https://nature-clikr.herokuapp.com/">Live Site</a> | <a
+                                    href="https://github.com/xwnnie/NatureClikr">GitHub</a></p>
                         </div>
                     </div>
                 </div>
