--- a/oraql.html
+++ b/oraql.html
@@ -76,6 +76,8 @@
                             <h1>Oraql</h1>
                             <hr>
                             <p>A website for users to ask and answer questions about supernatural phenomena</p>
+                            <p class="project-links"><a href="https://oraql.herokuapp.com/">Live Site</a> | <a
+                                    href="https://github.com/starsabhi/Oraql">GitHub</a></p>
                         </div>
                     </div>
                 </div>
