--- a/peacock.html
+++ b/peacock.html
@@ -76,6 +76,8 @@
                             <h1>Peacock Chinese Twitter Corpus</h1>
                             <hr>
                             <p>A large linguistic corpus for language research</p>
+                            <p class="project-links"><a href="http://www.peacockpus.com/">Site</a> | <a
+                                    href="https://figshare.com/articles/dataset/Peacock_Chinese_Twitter_Corpus_PCTC_/13489239">Dataset</a></p>
                         </div>
                     </div>
                 </div>
