download link css

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="btn-2 mb-5"><a href="./Xiaowen-Nie-resume.pdf"><span>Download CV&nbsp;&nbsp;<i class="ti-download"></i></span></a></div>
+                            <div class="btn-2 mb-5 download-link"><a href="./Xiaowen-Nie-resume.pdf"><span>Download CV&nbsp;&nbsp;<i class="ti-download"></i></span></a></div>
                         </div>
                         <div class="col-md-5 offset-md-1">
                             <div class="about-img animate-box" data-animate-effect="fadeInUp">
